tests/macro-tests/tests/expand/fail/non_existent_attr_macro.err.txt
error: cannot find attribute `non_existent_macro` in this scope
 --> /tests/expand/fail/non_existent_attr_macro.rs:1:3
  |
1 | #[non_existent_macro]
  |   ^^^^^^^^^^^^^^^^^^
